--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,82 @@
+hr {
+       display: block;
+       position: relative;
+       padding: 0;
+       margin: 8px auto;
+       height: 0;
+       width: 100%;
+       max-height: 0;
+       font-size: 1px;
+       line-height: 0;
+       clear: both;
+       border: none;
+       border-top: 1px solid #aaaaaa;
+       border-bottom: 1px solid #ffffff;
+}
+
 #pageTitle  {
- font-family: 'Helvetica', sans-serif;
- margin: 10px 0;
- font-size: 24px;
- font-weight: bold;
- line-height: 1;
- text-align: center;
- color: #006600;
- }
+	font-family: 'Helvetica', sans-serif;
+	margin: 10px 0;
+	font-size: 24px;
+	font-weight: bold;
+	line-height: 1;
+	text-align: center;
+	color: #006600;
+}
+
+#pageFooter  {
+	font-family: 'Helvetica', sans-serif;
+	padding-top: 10px;
+	margin: 10px 0;
+	font-size: 16px;
+	line-height: 1;
+	text-align: center;
+	color: gray;
+}
+
+#divTable {
+	width: 100%;
+	display: table;
+}
+
+#divTableRow {
+	display: table-row;
+}
  
- p {
-	 
- }
+#leftDiv {
+	width: 40%;
+	display: table-cell;
+	border-right: thick solid #ffffff;
+}
+ 
+#rightDiv {
+	width: 60%;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+	padding-right: 40px;
+}
+ 
+h2 {
+	font-family: 'Helvetica', sans-serif;
+	font-size: 16px;
+	color: #006600;
+}
+
+p {
+	font-family: 'Helvetica', sans-serif;
+	font-size: 16px;
+}
+
+a {
+	font-family: 'Helvetica', sans-serif;
+	font-size: 16px;
+}
+
+.profilePic {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	height: 50%;
+}
